--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </a>
         </div>
         <div class="block lg:hidden pr-4">
-          <button id="nav-toggle" class="flex items-center p-1 text-white hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+          <button id="nav-toggle" class="flex items-center p-1 text-black hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <title>Menu</title>
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
@@ -54,13 +54,13 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3">
-              <a class="lissy inline-block py-2 px-4 text-xl font-bold no-underline" href="#">Home</a>
+              <a class="lissy inline-block py-2 px-4 text-xl font-bold no-underline hover:text-white" href="#">Home</a>
             </li>
             <li class="mr-3">
-              <a class="lissy inline-block text-xl no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">What we do</a>
+              <a class="lissy inline-block text-xl no-underline font-bold  hover:text-underline hover:text-white py-2 px-4" href="#">What we do</a>
             </li>
             <li class="mr-3">
-              <a class="lissy inline-block text-xl no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">Who We are</a>
+              <a class="lissy inline-block text-xl no-underline font-bold  hover:text-underline hover:text-white py-2 px-4" href="#">Who We are</a>
             </li>
           </ul>
           <button
@@ -290,7 +290,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                     </svg>
                     <div class="ml-4 text-md tracking-wide font-semibold w-40">
-                        +44 1234567890
+                        +256 778787801
                     </div>
                 </div>
 
