removed unneccesary images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--Replace with your tailwind.css once created-->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
     <link rel="shortcut icon" href="favi/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
     <style>
       .gradient {
@@ -37,10 +38,7 @@
         <div class="pl-4 flex items-center">
           <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
             <!--Icon from: http://www.potlabicons.com/ -->
-            <img src="logo_3-removebg-preview.png" class="h-16 fill-current inline"
-              
-            >
-            AHNU
+            <img src="logo_3-removebg-preview.png" class="h-16 fill-current inline">
           </a>
         </div>
         <div class="block lg:hidden pr-4">
@@ -365,73 +363,94 @@
         Donate
       </button>
     </section>
-    <!--Footer-->
-    <footer class="bg-white">
+    <footer class="bg-indigo-900">
       <div class="container mx-auto px-8">
-        <div class="w-full flex flex-col md:flex-row py-6">
-          <div class="flex-1 mb-6 text-black">
-            <a class="text-pink-600 no-underline hover:no-underline font-bold text-xl lg:text-2xl" href="#">
-              <!--Icon from: http://www.potlabicons.com/ -->
-              <img src="logo_3-removebg-preview.png" class="w-24" alt="logo image">
-              Assistive Hands Network Uganda
-            </a>
+          <div class="w-full flex flex-col md:flex-row py-6">
+              <div class="flex-1 mb-6 text-black">
+                  <a class="text-pink-600 no-underline hover:no-underline font-bold text-xl lg:text-2xl" href="#">
+                      <img src="logo_3-removebg-preview.png" class="w-24" alt="logo image">
+                      Assistive Hands Network Uganda
+                  </a>
+              </div>
+              <div class="flex-1">
+                  <p class="uppercase text-gray-500 md:mb-6">Links</p>
+                  <ul class="list-reset mb-6">
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              FAQ
+                          </a>
+                      </li>
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              Help
+                          </a>
+                      </li>
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              Support
+                          </a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="flex-1">
+                  <p class="uppercase text-gray-500 md:mb-6">Legal</p>
+                  <ul class="list-reset mb-6">
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              Terms
+                          </a>
+                      </li>
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              Privacy
+                          </a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="flex-1">
+                  <p class="uppercase text-gray-500 md:mb-6">Social</p>
+                  <ul class="list-reset mb-6">
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              <i class="fa fa-facebook-square"> facebook</i>
+                          </a>
+                      </li>
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              <i class="fa fa-linkedin"> linkedIn</i>
+                          </a>
+                      </li>
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              <i class="fa fa-twitter"> twitter</i>
+                          </a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="flex-1">
+                  <p class="uppercase text-gray-500 md:mb-6">Company</p>
+                  <ul class="list-reset mb-6">
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              Official Blog
+                          </a>
+                      </li>
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              About Us
+                          </a>
+                      </li>
+                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                          <a href="#" class="no-underline hover:text-pink-500">
+                              Contact
+                          </a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-          <div class="flex-1">
-            <p class="uppercase text-gray-500 md:mb-6">Links</p>
-            <ul class="list-reset mb-6">
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">FAQ</a>
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Help</a>
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Support</a>
-              </li>
-            </ul>
-          </div>
-          <div class="flex-1">
-            <p class="uppercase text-gray-500 md:mb-6">Legal</p>
-            <ul class="list-reset mb-6">
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Terms</a>
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Privacy</a>
-              </li>
-            </ul>
-          </div>
-          <div class="flex-1">
-            <p class="uppercase text-gray-500 md:mb-6">Social</p>
-            <ul class="list-reset mb-6">
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Facebook</a>
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Linkedin</a>
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Twitter</a>
-              </li>
-            </ul>
-          </div>
-          <div class="flex-1">
-            <p class="uppercase text-gray-500 md:mb-6">Company</p>
-            <ul class="list-reset mb-6">
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Official Blog</a>
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">About Us</a>
-              </li>
-              <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                <a href="#" class="no-underline hover:underline text-gray-800 hover:text-pink-500">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
-    </footer>
+  </footer>
+  
     <!-- jQuery if you need it
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   -->
