--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         background: linear-gradient(90deg, #00B1B7 0%, #243A8D 100%);
       }
       .big{
-        color:#F0B324;
+        color:#CA439F;
       }
       .but{
         background-color:#C33F92 ;
@@ -63,7 +63,7 @@
           </ul>
           <button
             id="navAction"
-            class="mx-auto lg:mx-0 hover:underline text-xl text-white font-bold rounded-lg mt-4 lg:mt-0 py-2 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out but"
+            class="w-full md:w-auto mx-auto lg:mx-0 hover:underline text-xl text-white font-bold rounded-lg mt-4 lg:mt-0 py-2 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out but"
           >
             Donate
           </button>
@@ -88,7 +88,7 @@
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="hero.jpg" />
+          <img class="w-full md:w-4/5 z-50 " src="hero.jpg" alt="illustration of assistive " />
         </div>
       </div>
     </div>
@@ -276,12 +276,9 @@
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2">
             <div class="p-6 mr-2 bg-gray-100 dark:bg-gray-800 sm:rounded-lg">
-                <h1 class="text-4xl sm:text-5xl text-gray-800 dark:text-white font-extrabold tracking-tight">
+                <span class="text-4xl sm:text-5xl text-blue-400 dark:text-white font-extrabold tracking-tight">
                     Get in touch
-                </h1>
-                <p class="text-normal text-lg sm:text-2xl font-medium text-gray-600 dark:text-gray-400 mt-2">
-                    Fill in the form to start a conversation
-                </p>
+                </span>
 
                 <div class="flex items-center mt-4 text-gray-600 dark:text-gray-400">
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
@@ -305,20 +302,20 @@
             <form class="p-6 flex flex-col justify-center">
                 <div class="flex flex-col">
                     <label for="name" class="hidden">Full Name</label>
-                    <input type="name" name="name" id="name" placeholder="Full Name" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none">
+                    <input type="name" name="name" id="name" placeholder="Full Name" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none">
                 </div>
 
                 <div class="flex flex-col mt-2">
                     <label for="email" class="hidden">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Email" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none">
+                    <input type="email" name="email" id="email" placeholder="Email" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none">
                 </div>
 
                 <div class="flex flex-col mt-2">
-                    <label for="tel" class="hidden">Number</label>
-                    <textarea name="tel" id="tel" placeholder="Enter Your Message" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-400 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none"></textarea>
+                    <label for="tel" class="hidden">message</label>
+                    <textarea name="tel" id="tel" placeholder="Enter Your Message" class="w-100 mt-2 py-3 px-3 rounded-lg bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-700 text-gray-800 font-semibold focus:border-indigo-500 focus:outline-none"></textarea>
                 </div>
 
-                <button type="submit" class="md:w-48 bg-yellow-400 hover:bg-green-500 text-white font-bold py-3 px-6 rounded-lg mt-3 transition ease-in-out duration-300">
+                <button type="submit" class="md:w-48 bg-blue-400  hover:bg-green-500 text-white font-bold py-3 px-6 rounded-lg mt-3 transition ease-in-out duration-300">
                     Send Message
                 </button>
             </form>
@@ -434,11 +431,11 @@
   <!-- Add Swiper library and initialization code here -->
   
 
-    <footer class="bg-indigo-900">
+    <footer class="gradient" >
       <div class="container mx-auto px-8">
           <div class="w-full flex flex-col md:flex-row py-6">
               <div class="flex-1 mb-6 text-black">
-                  <a class="text-pink-600 no-underline hover:no-underline font-bold text-xl lg:text-2xl" href="#">
+                  <a class="text-gray-100 no-underline hover:no-underline font-bold text-xl lg:text-2xl" href="#">
                       <img src="logo_3-removebg-preview.png" class="w-24" alt="logo image">
                       Assistive Hands Network Uganda
                   </a>
@@ -530,11 +527,15 @@
               </div>
           </div>
       </div>
+      <div class="text-center py-4">
+        &copy; AssistiveHandsNetworkUganda 2023-<span id="yeary"></span>
+      </div>
   </footer>
-  
-    <!-- jQuery if you need it
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  -->
+  <script>
+    var year = document.getElementById("yeary");
+    var today = new Date();
+    year.innerText = today.getFullYear();
+  </script>
    <script src="script.js"></script>
   </body>
 </html>
