--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>
       Assistive Hands Network Uganda | Making a difference with compassion and innovation
     </title>
-    <meta name="description" content="Simple landind page" />
+    <meta name="description" content="Empowering lives through compassion and innovation, Assistive Hands Network Uganda is dedicated to creating a world where all children have equal access to education and technology, irrespective of their disabilities." />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -50,15 +50,18 @@
           </button>
         </div>
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
-          <ul class="list-reset lg:flex justify-end flex-1 items-center">
+          <ul class="list-reset lg:flex justify-end flex-1 items-center " id="navLinks">
             <li class="mr-3">
-              <a class="lissy inline-block py-2 px-4 text-xl font-bold no-underline hover:text-gray-700" href="#">Home</a>
+              <a class=" inline-block py-2 px-4 text-xl font-bold no-underline hover:text-gray-700" href="#">Home</a>
             </li>
             <li class="mr-3">
-              <a class="lissy inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#whatWeDo">What we do</a>
+              <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#">Programmes & Projects</a>
             </li>
             <li class="mr-3">
-              <a class="lissy inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#whoWeAre">Who We are</a>
+              <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#whatWeDo">What we do</a>
+            </li>
+            <li class="mr-3">
+              <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#whoWeAre">Who We are</a>
             </li>
           </ul>
           <button
@@ -169,7 +172,8 @@
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
-        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
+
+        <a href="scholarships.html" class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
           <div class="flex-none bg-white rounded-b rounded-t-none overflow-hidden shadow px-6 py-1">
             <div class="flex items-center justify-start">
               <span class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-2 py-4 px-5 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -186,9 +190,9 @@
               special emphasis on empowering girls.
             </p>
           </div>
-        </div>
+        </a>
 
-        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
+        <a href="technology.html" class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
           <div class="flex-none bg-white rounded-b rounded-t-none overflow-hidden shadow px-6 py-1">
             <div class="flex items-center justify-start">
               <span class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-2 py-4 px-5 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -205,7 +209,7 @@
               content, we bridge the digital divide for a brighter future.
             </p>
           </div>
-        </div>
+        </a>
 
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
           <div class="flex-none bg-white rounded-b rounded-t-none overflow-hidden shadow px-6 py-1">
