--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           </div>
         </a>
 
-        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
+        <a href="protection.html" class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
           <div class="flex-none bg-white rounded-b rounded-t-none overflow-hidden shadow px-6 py-1">
             <div class="flex items-center justify-start">
               <span class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-2 py-4 px-5 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -228,7 +228,7 @@
               at the heart of our mission, ensuring a safe and nurturing environment.
             </p>
           </div>
-        </div>
+        </a>
 
         <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
           <div class="flex-none bg-white rounded-b rounded-t-none overflow-hidden shadow px-6 py-1">
