--- a/technology.html
+++ b/technology.html
@@ -82,7 +82,7 @@
     <!-- content -->
     <div class="bg-white pt-24">
         <div class="container mx-auto p-8 text-black">
-            <h1 class="text-4xl font-bold mb-4">Empowering with Assistive Technology: Unlocking Possibilities</h1>
+            <h1 class="text-4xl font-bold mb-4 text-blue-500">Empowering with Assistive Technology: Unlocking Possibilities</h1>
             <p class="mb-8">The Problem: Children with Disabilities Lack Access to Assistive Technology in Uganda</p>
             <p class="mb-4">Uganda is an exceptional country with exceptional people, but it also faces many challenges in
                 providing quality education for all its children, especially those with disabilities. According to <a
