modified the nav links color

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </button>
         </div>
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
-          <ul class="list-reset lg:flex justify-end flex-1 items-center " id="navLinks">
+          <ul class="list-reset lg:flex justify-end flex-1 items-center text-white" id="navLinks">
             <li class="mr-3">
               <a class=" inline-block py-2 px-4 text-xl font-bold no-underline hover:text-gray-700" href="#">Home</a>
             </li>
