--- a/protection.html
+++ b/protection.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-        Scholarships - Assistive Hands Network Uganda | Making a difference with compassion and innovation
+        Child Protection and Advocacy - Assistive Hands Network Uganda | Making a difference with compassion and innovation
     </title>
     <meta name="description" content="Empowering lives through compassion and innovation, Assistive Hands Network Uganda is dedicated to creating a world where all children have equal access to education and technology, irrespective of their disabilities." />
     <meta name="keywords" content="" />
@@ -50,7 +50,7 @@
           </button>
         </div>
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
-            <ul class="list-reset lg:flex justify-end flex-1 items-center " id="navLinks">
+            <ul class="list-reset lg:flex justify-end flex-1 items-center text-white" id="navLinks">
                 <li class="mr-3">
                   <a class=" inline-block py-2 px-4 text-xl font-bold no-underline hover:text-gray-700" href="index.html">Home</a>
                 </li>
