added the gallery page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
               <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#">Programmes & Projects</a>
             </li>
             <li class="mr-3">
+              <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="gallery.html">Gallery</a>
+            </li>
+            <li class="mr-3">
               <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#whatWeDo">What we do</a>
             </li>
             <li class="mr-3">
