--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
         <div class="flex flex-wrap">
-          <div class="w-5/6 sm:w-1/2 p-6">
-            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+          <div class="w-full md:w-1/2 p-6">
+            <h3 class="text-3xl text-center text-gray-800 font-bold leading-none mb-3">
               Mission
             </h3>
             <p class="text-gray-600 mb-8">
