--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </div>
         </div>
 
-        <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
+        <a href="livelihood.html" class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
           <div class="flex-none bg-white rounded-b rounded-t-none overflow-hidden shadow px-6 py-1">
             <div class="flex items-center justify-start">
               <span class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-2 py-4 px-5 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -269,7 +269,7 @@
               for persons with disabilities, with a particular focus on women.
             </p>
           </div>
-        </div>
+        </a>
         
       </div>
     </section>
