added more pages

--- a/scholarships.html
+++ b/scholarships.html
@@ -66,6 +66,9 @@
                 <li class="mr-3">
                   <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="index.html#whoWeAre">Who We are</a>
                 </li>
+                <li class="mr-3">
+                  <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="getIvolved.html">Get Involved</a>
+                </li>
             </ul>
           <button
             id="navAction"
@@ -77,9 +80,7 @@
       </div>
       <hr class="border-b border-gray-400 opacity-25 my-0 py-0" />
     </nav>
-    <div class="gradient h-20">
-
-    </div>
+    <div class="gradient h-20"></div>
     
     <div class="bg-gray-100 pt-8">
         <div class="container mx-auto p-8 text-black">
@@ -244,11 +245,6 @@
         &copy; AssistiveHandsNetworkUganda 2023-<span id="yeary"></span>
       </div>
   </footer>
-  <script>
-    var year = document.getElementById("yeary");
-    var today = new Date();
-    year.innerText = today.getFullYear();
-  </script>
    <script src="script.js"></script>
   </body>
 </html>
