--- a/gallery.html
+++ b/gallery.html
@@ -66,6 +66,9 @@
                 <li class="mr-3">
                   <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="index.html#whoWeAre">Who We are</a>
                 </li>
+                <li class="mr-3">
+                  <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="getIvolved.html">Get Involved</a>
+                </li>
             </ul>
             <button
             id="navAction"
