--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             <li class="mr-3">
               <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="#whoWeAre">Who We are</a>
             </li>
+            <li class="mr-3">
+              <a class=" inline-block text-xl no-underline font-bold  hover:text-underline hover:text-gray-700 py-2 px-4" href="getIvolved.html">Get Involved</a>
+            </li>
           </ul>
           <button
             id="navAction"
@@ -167,7 +170,7 @@
         </div>
       </div>
     </section>
-    <section class="bg-white border-b py-8" id="whatWeDo">
+    <section class="bg-gray-100 border-b py-8" id="whatWeDo">
       <div class="container mx-auto flex flex-wrap pt-4 pb-12">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center big">
           What We Do
@@ -273,6 +276,36 @@
         
       </div>
     </section>
+
+    <!-- Patners-->
+    <section class="py-16 bg-white">
+      <div class="container m-auto px-6 space-y-8 md:px-12 lg:px-56">
+        <div>
+          <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center big">
+            Our Patners
+          </h2>
+          <div class="w-full mb-4">
+            <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+          </div>
+        </div>
+        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4">
+            <div class="p-4">
+                <img src="kyu_logo.png" class=" h-" alt="Kyambogo University logo">
+            </div>
+            <div class="p-4">
+                <img src="NCDC.png" class="w-36 " alt="National curriculum develpment center logo">
+            </div>
+            <div class="p-4">
+                <img src="https://tailus.io/sources/blocks/company-site/preview/images/clients/client-3.png" class="w-32 " alt="">
+            </div>
+        </div>
+        <div class="flex flex-col items-center">
+          <a href="patnerships.html" class="w-48 text-center text-lg font-bold py-2 px-6 bg-green-500 rounded-lg">partner with us</a>
+        </div>
+      </div>
+      
+    </section>
+
     <section class="bg-gray-100 py-8" id="contactUs">
       <div class="container mx-auto px-2 pt-4 pb-12 text-gray-800">
           <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center big">
@@ -283,28 +316,43 @@
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2">
             <div class="p-6 mr-2 bg-gray-100 dark:bg-gray-800 sm:rounded-lg">
-                <span class="text-4xl sm:text-5xl text-blue-400 dark:text-white font-extrabold tracking-tight">
-                    Get in touch
-                </span>
+              <span class="text-4xl sm:text-5xl text-blue-400 dark:text-white font-extrabold tracking-tight">
+                  Get in touch
+              </span>
 
-                <div class="flex items-center mt-4 text-gray-600 dark:text-gray-400">
-                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
-                    </svg>
-                    <div class="ml-4 text-md tracking-wide font-semibold w-40">
-                        +256 778787801
-                    </div>
-                </div>
+              <div class="flex items-center mt-4 text-gray-600 dark:text-gray-400">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+                  </svg>
+                  <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                      +256781666000
+                  </div>
+              </div>
 
-                <div class="flex items-center mt-2 text-gray-600 dark:text-gray-400">
-                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
-                    </svg>
-                    <div class="ml-4 text-md tracking-wide font-semibold w-40">
-                        info@acme.org
-                    </div>
-                </div>
-            </div>
+              <div class="flex items-center mt-2 text-gray-600 dark:text-gray-400">
+                  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" class="w-8 h-8 text-gray-500">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                  </svg>
+                  <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                      reachout@assistivehandsnetwork.org
+                  </div>
+              </div>
+
+              <div class="flex items-center mt-2 text-gray-600 dark:text-gray-400">
+                  <i class="fa fa-map-marker text-3xl"></i>
+                  <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                      Plot 41, Sir Apolo Kagwa Road
+                      Kampala, Uganda
+                  </div>
+              </div>
+
+              <div class="flex items-center mt-2 text-gray-600 dark:text-gray-400">
+                <i class="fa fa-clock-o text-3xl"></i>
+                  <div class="ml-4 text-md tracking-wide font-semibold w-40">
+                      Our working hours: 9:00 AM - 5:00 PM
+                  </div>
+              </div>
+          </div>
 
             <form class="p-6 flex flex-col justify-center">
                 <div class="flex flex-col">
@@ -435,114 +483,120 @@
 
     </section>
   
-  <!-- Add Swiper library and initialization code here -->
-  
 
-    <footer class="gradient" >
-      <div class="container mx-auto px-8">
-          <div class="w-full flex flex-col md:flex-row py-6">
-              <div class="flex-1 mb-6 text-black">
-                  <a class="text-gray-100 no-underline hover:no-underline font-bold text-xl lg:text-2xl" href="#">
-                      <img src="logo_3-removebg-preview.png" class="w-24" alt="logo image">
-                      Assistive Hands Network Uganda
-                  </a>
-              </div>
-              <div class="flex-1">
-                  <p class="uppercase text-gray-500 md:mb-6">Links</p>
-                  <ul class="list-reset mb-6">
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              FAQ
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              Help
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              Support
-                          </a>
-                      </li>
-                  </ul>
-              </div>
-              <div class="flex-1">
-                  <p class="uppercase text-gray-500 md:mb-6">Legal</p>
-                  <ul class="list-reset mb-6">
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              Terms
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              Privacy
-                          </a>
-                      </li>
-                  </ul>
-              </div>
-              <div class="flex-1">
-                  <p class="uppercase text-gray-500 md:mb-6">Social Links</p>
-                  <ul class="list-reset mb-6">
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              <i class="fa fa-facebook-square"> facebook</i>
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              <i class="fa fa-linkedin"> linkedIn</i>
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              <i class="fa fa-twitter"> twitter</i>
-                          </a>
-                      </li>
-                  </ul>
-              </div>
-              <div class="flex-1">
-                  <p class="uppercase text-gray-500 md:mb-6">Links</p>
-                  <ul class="list-reset mb-6">
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#" class="no-underline hover:text-pink-500">
-                              Official Blog
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#whoWeAre" class="no-underline hover:text-pink-500">
+  <footer class="gradient">
+    <div class="container mx-auto px-8">
+        <div class="w-full flex flex-col md:flex-row py-6">
+            <div class="flex-1 mb-6 text-black">
+                <a class="text-gray-100 no-underline hover:no-underline font-bold text-xl lg:text-2xl" href="#">
+                    <img src="logo_3-removebg-preview.png" class="w-24" alt="logo image">
+                    Assistive Hands Network Uganda
+                </a>
+            </div>
+            <div class="flex-1">
+                <p class="uppercase text-gray-500 md:mb-6">Links</p>
+                <ul class="list-reset mb-6">
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            FAQ
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            Help
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            Support
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex-1">
+                <p class="uppercase text-gray-500 md:mb-6">Legal</p>
+                <ul class="list-reset mb-6">
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            Terms
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            Privacy
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex-1">
+                <p class="uppercase text-gray-500 md:mb-6">Social Links</p>
+                <ul class="list-reset mb-6">
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            <i class="fa fa-facebook-square"> facebook</i>
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            <i class="fa fa-linkedin"> linkedIn</i>
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            <i class="fa fa-twitter"> twitter</i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex-1">
+                <p class="uppercase text-gray-500 md:mb-6">Links</p>
+                <ul class="list-reset mb-6">
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#" class="no-underline hover:text-pink-500">
+                            Official Blog
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#whoWeAre" class="no-underline hover:text-pink-500">
                             Who we Are
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                          <a href="#contactUs" class="no-underline hover:text-pink-500">
-                              Contact
-                          </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                        <a href="#contactUs" class="no-underline hover:text-pink-500">
+                            Contact
+                        </a>
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                         <a href="#testimonials" class="no-underline hover:text-pink-500">
                             Testimonial
                         </a>
-                      </li>
-                      <li class="mt-2 inline-block mr-2 md:block md:mr-0">
+                    </li>
+                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                         <a href="#getInvolved" class="no-underline hover:text-pink-500">
                             Get Involved
                         </a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-      <div class="text-center py-4">
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Newsletter Form -->
+            <div class="flex-1">
+                <p class="uppercase text-gray-500 md:mb-6">Subscribe to Newsletter</p>
+                <form class="mb-6">
+                    <div class="flex items-center">
+                      <input type="email" placeholder="Your email address" class="px-4 py-2 rounded-l-lg text-black w-full">
+                      <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-r-lg hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300">
+                          Subscribe
+                      </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="text-center py-4">
         &copy; AssistiveHandsNetworkUganda 2023-<span id="yeary"></span>
-      </div>
-  </footer>
-  <script>
-    var year = document.getElementById("yeary");
-    var today = new Date();
-    year.innerText = today.getFullYear();
-  </script>
+    </div>
+</footer>
    <script src="script.js"></script>
   </body>
 </html>
