--- a/patnerships.html
+++ b/patnerships.html
@@ -144,7 +144,7 @@
             </p>
         </div>
     </section>
-    <footer class="gradient text-white">
+    <footer class="gradient">
         <div class="container mx-auto px-8">
             <div class="w-full flex flex-col md:flex-row py-6">
                 <div class="flex-1 mb-6 text-black">
@@ -257,6 +257,6 @@
             &copy; AssistiveHandsNetworkUganda 2023-<span id="yeary"></span>
         </div>
     </footer>
-    <script src="script.js"></script>
+       <script src="script.js"></script>
 </body>
 </html>
