--- a/whatwedo.html
+++ b/whatwedo.html
@@ -131,9 +131,7 @@
         </div>
     </div>
     
-  
-
-    <footer class="gradient" >
+    <footer class="gradient">
       <div class="container mx-auto px-8">
           <div class="w-full flex flex-col md:flex-row py-6">
               <div class="flex-1 mb-6 text-black">
@@ -207,7 +205,7 @@
                       </li>
                       <li class="mt-2 inline-block mr-2 md:block md:mr-0">
                           <a href="#whoWeAre" class="no-underline hover:text-pink-500">
-                            Who we Are
+                              Who we Are
                           </a>
                       </li>
                       <li class="mt-2 inline-block mr-2 md:block md:mr-0">
@@ -216,28 +214,36 @@
                           </a>
                       </li>
                       <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                        <a href="#testimonials" class="no-underline hover:text-pink-500">
-                            Testimonial
-                        </a>
+                          <a href="#testimonials" class="no-underline hover:text-pink-500">
+                              Testimonial
+                          </a>
                       </li>
                       <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                        <a href="#getInvolved" class="no-underline hover:text-pink-500">
-                            Get Involved
-                        </a>
+                          <a href="#getInvolved" class="no-underline hover:text-pink-500">
+                              Get Involved
+                          </a>
                       </li>
                   </ul>
+              </div>
+  
+              <!-- Newsletter Form -->
+              <div class="flex-1">
+                  <p class="uppercase text-gray-500 md:mb-6">Subscribe to Newsletter</p>
+                  <form class="mb-6">
+                      <div class="flex items-center">
+                        <input type="email" placeholder="Your email address" class="px-4 py-2 rounded-l-lg text-black w-full">
+                        <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded-r-lg hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300">
+                            Subscribe
+                        </button>
+                      </div>
+                  </form>
               </div>
           </div>
       </div>
       <div class="text-center py-4">
-        &copy; AssistiveHandsNetworkUganda 2023-<span id="yeary"></span>
+          &copy; AssistiveHandsNetworkUganda 2023-<span id="yeary"></span>
       </div>
   </footer>
-  <script>
-    var year = document.getElementById("yeary");
-    var today = new Date();
-    year.innerText = today.getFullYear();
-  </script>
-   <script src="script.js"></script>
+     <script src="script.js"></script>
   </body>
 </html>
